<?xml version="1.0"?>
<package>
  <name>jsk_2021_10_semi</name>
  <version>0.0.5</version>
  <description>The jsk_2021_10_semi package</description>

  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <run_depend>fetcheus</run_depend>
  <run_depend>jsk_maps</run_depend>
  <run_depend>pr2eus</run_depend>

  <export>
  </export>
</package>
